<resources>
    <string name="app_name">Validate</string>

    <!-- Strings related to login -->
    <string name="prompt_nome">Nome</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_idade">Idade</string>
    <string name="prompt_cpf">CPF</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_cadastrar">Cadastrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="not_empty">Não pode ficar vazio</string>
</resources>
